# DataCentersManager

./: AuxDataCenter.h  CMakeLists.txt  DataCenter.h  DataCenterManager.h  DataManagerExceptions.h  Dry.docx  TreesTest.cpp  in1.txt  library.cpp  library1.cpp  library1.h  linkedList.h  main.cpp  main1.cpp
Data Structures/: Array.h  Queue.cpp  Queue.h
Data Structures/AVLTree/: AVLTree Documentation.txt  AVLTree.cpp  AVLTree.h  BinarySearchTree.h  BinaryTree.h
